hotfix before release: fixed overflowing of whatsnewtextcontainer

--- a/src/inject/injected.css
+++ b/src/inject/injected.css
@@ -2881,6 +2881,7 @@ body {
 
 .whatsnewTextContainer {
   display: flex;
+  overflow-x: hidden;
   flex-direction: column;
   width: 90%;
   margin: 5px auto;
